# activation-clustering

./: LICENSE  README.md  pyproject.toml  pytest.ini  setup.py  setup_poetry.sh
.github/workflows/: tests.yml
activation_clustering/: cluster_analyzer.py  clustering.py  extract_activations.py  soft_clustering.py
documents/: activation_extraction_strategy.md  initial_project_description.md  project_progress.md  soft_clustering_strategy.md
prompts/: add_comments.md  markdown_formatting.md
src/: __init__.py  clustering.py  dpm_clustering.py  extract_activations.py  positional_whitening.py  soft_clustering.py  whitening.py
tests/: test_cluster_analyzer.py  test_extract_activations.py  test_soft_clustering.py
