[tool.poetry]
name = "activation-clustering"
version = "0.1.0"
description = "Neural network activation clustering for interpretability research"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = "2.4.1"
transformers = "^4.46.1"
datasets = "^3.0.2"
numpy = "^2.1.2"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
tqdm = "^4.66.6"
accelerate = "^1.0.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
zstandard = "^0.23.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^24.1.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi-line-output = 3 