[tool.poetry]
name = "activation-clustering"
version = "0.1.0"
description = "Neural network activation clustering for interpretability research"
authors = ["Tomas Dulka <tomasdulka@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=2.1.0"
transformers = "^4.0.0"
datasets = "^2.0.0"
numpy = "^1.20.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi-line-output = 3