[tool.poetry]
name = "activation-clustering"
version = "0.1.0"
description = "Tools for analyzing neural network activations through clustering"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "activation_clustering" }
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "2.1.0"
numpy = "^1.24.0"
transformers = "^4.30.0"
datasets = "^2.12.0"
tqdm = "^4.65.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
plotly = "^5.16.0"
pytest-cov = "^4.1.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "datasets.*",
    "tqdm.*"
]
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
]